--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
-    <p>Learn more on the <a href="https://ibighit.com/bts/eng" target="_blank">Official BTS Website</a> (external link).</p>
+    <p>Learn more on the <a href="https://ibighit.com/bts/eng" target="_blank">Official BTS Website</a> </p>
 </div>
 
 <footer>
@@ -44,4 +44,5 @@
 </footer>
 </body>
 </html>
+
 
