--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="content">
     <h2>Welcome to BTS!</h2>
     <p>BTS (Bangtan Sonyeondan) is a South Korean group known for their music, choreography, and worldwide influence. This site introduces their members, music, achievements, and fanbase.
-        BTS offically debuted on June 13, 2013 under Big Hit Entertainment. Their hits mix pop, hip-hop, and heartfelt messages about growing up, mental health, and self-love.</p>
+        BTS officially debuted on June 13, 2013 under Big Hit Entertainment. Their hits mix pop, hip-hop, and heartfelt messages about growing up, mental health, and self-love.</p>
 
     <h3>Featured Video</h3>
     <!-- BONUS FEATURE: YouTube embed -->
@@ -44,5 +44,6 @@
 </footer>
 </body>
 </html>
+
 
 
