--- a/achievements.html
+++ b/achievements.html
@@ -33,8 +33,13 @@
     </ul>
 </div>
 
+<div style="text-align: center;">
+   <img src="Whitehouse.jpg" alt="BTS Logo" width="777" height="315"> 
+</div>
+
 <footer>
     © 2025 BTS Fan Site
 </footer>
 </body>
 </html>
+
